<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">


    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/purchaseTotal"
        android:layout_alignStart="@+id/gridView"
        android:layout_marginStart="34dp" />

    <TextView
        android:id="@+id/add_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_balance"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/gridView"
        android:layout_alignStart="@+id/balance" />

    <Button
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="insert coins"
        android:id="@+id/insertCoinButton"
        android:textSize="9sp"
        android:layout_above="@+id/gridView"
        android:layout_alignStart="@+id/add_balance"
        android:layout_alignEnd="@+id/add_balance" />

    <TextView
        android:id="@+id/purchaseTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginEnd="37dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_above="@+id/add_balance"
        android:layout_alignEnd="@+id/gridView" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="290dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:columnWidth="100dp"
        android:drawSelectorOnTop="true"
        android:focusable="true"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        />




    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:background="#f0f0f0"
        android:scrollIndicators="none">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignWithParentIfMissing="false"
            android:layout_marginStart="26dp"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_toEndOf="@+id/quantity"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/decrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="decreaseInteger"
                android:text="-" />

            <TextView
                android:id="@+id/integer_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:text="1"
                android:textStyle="bold"
                android:textSize="20sp" />

            <Button
                android:id="@+id/increase"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="increaseInteger"
                android:text="+" />
        </LinearLayout>

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/purchase_button" />



    </RelativeLayout>


</RelativeLayout>